# parallel-and-distributed-computing-practices

./: CMakeLists.txt  README.md  open_mpi.c  resultados.txt
Exercises/: MPI_test.c  configurar cluster - basico.txt  correctexample  example.c  execute  matrix_multiplication_open_mp.c  matrix_multiplication_sequential.c  mmopenmp  mms  performanceTest-cpb  pi_omp_for_reduction.c
Final/: a.out  c.cpp
FinalLizzy/: hello.cpp
Practica 3 entregable/: ltenganah-nrestrepot.tar
Practice1/: .~lock.Resultados.ods#  CMakeCache.txt  CMakeLists.txt  LEEME  Makefile  Resultados.ods  a.out  blur-effect.c  blur-test.c  bmp_to_matrix  bmp_to_matrix.C  cmake_install.cmake
Practice2/: CMakeLists.txt  Makefile  blur-effect  blur-effect.cpp  boxBlur  cuda_processing.cu  image_processing  ltenganah-nrestrepot.tar  main.cpp  resultados.txt  script_ejecutar_todo
Practice3/: .~lock.Resultados.ods#  CMakeCache.txt  CMakeLists.txt  Makefile  Resultados.ods  blur-effect  blur-effect-in.cpp  blur-effect-lizzy.cpp  blur-effect.cpp  blur-effect2.cpp  clean_files~  cmake_install.cmake  key_lizzy.pem  mpi-hosts  script_basico  script_basico~
Project/: example.cpp
RSA/: cuda_rsa  cuda_rsa.cu  file  gistfile1  gistfile1.cpp  gmon.out  lizzy  lizzy.cpp  mpi_test_cases~  openmp_test_cases  rsa_mpi  rsa_mpi.cpp  rsa_omp  rsa_omp.cpp  rsa_sec  rsa_sec.cpp  rsa_sec_not_gmp.cpp  sequential_test_cases~  test_cases  test_cases~
cs344_Problem_Set_1/: Makefile  compare.cpp  main.cpp  reference_calc.cpp  student_func.cu
posparcial1/: cuda_e  cuda_e.cu  e  e.c  e_optimized  e_optimized.c  square  (+1 more)
(+83 files in other folders)
