cmake_minimum_required(VERSION 2.8)
project( blur-effect )
find_package( OpenCV REQUIRED)
find_package( OpenMP REQUIRED)
find_package(MPI REQUIRED)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
include_directories(${MPI_INCLUDE_PATH})
add_executable( blur-effect blur-effect.cpp )
target_link_libraries( blur-effect ${OpenCV_LIBS} ${MPI_LIBRARIES})
if(MPI_COMPILE_FLAGS)
  set_target_properties(blur-effect PROPERTIES
    COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
endif()

if(MPI_LINK_FLAGS)
  set_target_properties(blur-effect PROPERTIES
    LINK_FLAGS "${MPI_LINK_FLAGS}")
endif()
